Button width on mobile view fixed

--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ textarea:not(:placeholder-shown) + span{
   transform:translateY(0px);
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991.98px) {
 	a[type="button"] {
 		width: 100%;
 	}
